show list grammar guideline

--- a/.settings/org.eclipse.core.resources.prefs
+++ b/.settings/org.eclipse.core.resources.prefs
@@ -1,3 +1,4 @@
 eclipse.preferences.version=1
 encoding//src/Controller/LoginController.java=UTF-8
 encoding//src/Controller/RegisterController.java=UTF-8
+encoding//src/DAO/GrammarGuideLineManageDAO.java=UTF-8
